--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
                     <h2 class="hero__title">Discover Your Next Great Read</h2>
                     <p class="hero__subtitle">Track books, write reviews, and connect with fellow readers</p>
                 </div>
+                <div class="cta-section">
+    <h2>Start Your Reading Journey</h2>
+    <div class="auth-buttons">
+        <a href="register.html" class="btn btn-primary">Sign Up Free</a>
+        <a href="login.html" class="btn btn-secondary">Login</a>
+    </div>
+</div>
                 <div class="section">
                     <h3 class="section__title">Trending This Week</h3>
                     <div class="book-grid" id="trendingBooks"></div>
